# o1js-bench

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
jolt/: Cargo.toml
jolt/guest/: Cargo.toml
jolt/guest/src/: lib.rs
jolt/src/: main.rs
o1js/: bench.mjs  package-lock.json  package.json
results/: latest.json  latest.md
risc0/: Cargo.toml
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
scripts/: bench.mjs  generate-fixtures.mjs  validate-fixtures.mjs
shared/fixtures/: ecdsa_secp256k1.json
