[package]
name = "jolt-ecdsa-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jolt-sdk = { git = "https://github.com/a16z/jolt.git", rev = "ffafae83c858cd2a03b235ccb0913e5a4798d29e", features = ["host"] }
jolt-inlines-secp256k1 = { git = "https://github.com/a16z/jolt.git", rev = "ffafae83c858cd2a03b235ccb0913e5a4798d29e", features = ["host"] }
guest = { package = "jolt-ecdsa-bench-guest", path = "./guest" }
