[workspace]
resolver = "2"
members = ["host", "methods", "methods/guest"]

[workspace.dependencies]
anyhow = "1.0"
hex = "0.4"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "arithmetic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
