[package]
name = "risc0-ecdsa-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
hex.workspace = true
k256.workspace = true
risc0-ecdsa-methods = { path = "../methods" }
risc0-zkvm = { version = "=2.3.2", default-features = false, features = ["client", "prove", "disable-dev-mode"] }
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
